cmake_minimum_required(VERSION 3.16)
project(spo_wrapper)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(spo1)
include_directories(${CMAKE_JS_INC})
include_directories(spo1/include)
include_directories(../node_modules/node-addon-api)
include_directories(/usr/include/node)
add_library(${CMAKE_PROJECT_NAME} SHARED wrapper.cpp)
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
target_link_libraries(${CMAKE_PROJECT_NAME} spo1)